tests/baselines/reference/voidOperatorInvalidOperations.errors.txt
voidOperatorInvalidOperations.ts(4,15): error TS1005: ',' expected.
voidOperatorInvalidOperations.ts(4,20): error TS1109: Expression expected.
voidOperatorInvalidOperations.ts(7,17): error TS1109: Expression expected.


==== voidOperatorInvalidOperations.ts (3 errors) ====
    // Unary operator void
    
    // operand before void
    var ANY = ANY void ;    //expect error
                  ~~~~
!!! error TS1005: ',' expected.
                       ~
!!! error TS1109: Expression expected.
    
    // miss an operand
    var ANY1 = void ;
                    ~
!!! error TS1109: Expression expected.